docs: update ARCHITECTURE.md — reflect actual gtk4kt implementation (JVM + Panama + Rust)